<resources>
    <string name="app_name">Kotha Barta</string>


    <string name="facebook_app_id">1615763588839403</string>
    <string name="fb_login_protocol_scheme">fb1615763588839403</string>
    <string name="facebook_client_token">a04dfbd7b81bd8c0df2fff22d05b223b</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="last_message">Last Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="_12_56_pm">12:56 pm</string>
    <string name="textview">hi how are you</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_message">Enter your message</string>

    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Kotha Barta Notification Channel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="kotha_barta">Kotha Barta</string>
    <string name="version_1_0">Version - 1.0</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_profile_image">Change Profile Image</string>


</resources>